# modorganizer-installer_quick

./: CMakeLists.txt  appveyor.yml
.github/workflows/: build.yml
src/: CMakeLists.txt  installer_quick_en.ts  installerquick.cpp  installerquick.h  simpleinstalldialog.cpp  simpleinstalldialog.h  simpleinstalldialog.ui
